--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,10 @@
-dd.pangxie@gmail.com
+#############################
+#2012-3-4
+#By PXunL
+#dd.pangxie@gmail.com
+#############################
+
+This is my graduation project.
+Perhaps this does't make muuch sense.
+I just do it for fun. And Of course I have to do this.
+
