--- a/ReadMe
+++ b/ReadMe
@@ -5,6 +5,6 @@
 #############################
 
 This is my graduation project.
-Perhaps this does't make muuch sense.
+Perhaps this does't make much sense.
 I just do it for fun. And Of course I have to do this.
 
